[gd_scene load_steps=4 format=3 uid="uid://cfd12mpey6vet"]

[ext_resource type="Script" path="res://scripts/edit_task.gd" id="1_ny1xq"]
[ext_resource type="Script" path="res://scripts/tween_animator.gd" id="2_sfwix"]

[sub_resource type="Curve" id="Curve_00wtv"]
_data = [Vector2(0, 0), 0.0, 1.63033, 0, 0, Vector2(1, 1), -0.376472, 0.0, 0, 0]
point_count = 2

[node name="Edit task menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ny1xq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"TranslucentPanel"

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(320, 64)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 256.0
offset_right = 160.0
offset_bottom = 328.0
grow_horizontal = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Button background" type="Panel" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.16
theme_type_variation = &"CardPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TimeHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Minutes Duration LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/TimeHBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
placeholder_text = "m"
alignment = 1
max_length = 2
virtual_keyboard_type = 2

[node name="Task Duration Label2" type="Label" parent="MarginContainer/VBoxContainer/TimeHBoxContainer"]
layout_mode = 2
text = ":"
horizontal_alignment = 1

[node name="Seconds Duration LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/TimeHBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
placeholder_text = "s"
alignment = 1
max_length = 2
virtual_keyboard_type = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/TimeHBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
show_percentage = false

[node name="Minutes Left LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/TimeHBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
placeholder_text = "m"
alignment = 1
max_length = 2
virtual_keyboard_type = 2

[node name="Time Left Label" type="Label" parent="MarginContainer/VBoxContainer/TimeHBoxContainer"]
layout_mode = 2
text = ":"
horizontal_alignment = 1

[node name="Seconds Left LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/TimeHBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
placeholder_text = "s"
alignment = 1
max_length = 2
virtual_keyboard_type = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2

[node name="Icon Input" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "‚è≤"
alignment = 1
max_length = 1

[node name="Title Input" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Escribe tu tarea"
wrap_mode = 1
language = "es_ES"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Back Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Atras"
language = "es_ES"

[node name="Confirm Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Crear"
language = "es_ES"

[node name="Duration Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -160.0
offset_bottom = -137.0
grow_horizontal = 2
grow_vertical = 2
text = "Duracion"
language = "es_ES"

[node name="Time left Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -160.0
offset_right = 156.0
offset_bottom = -137.0
grow_horizontal = 2
grow_vertical = 2
text = "Tiempo Restante"
horizontal_alignment = 2
language = "es_ES"

[node name="Menu Tween Animator" type="Node" parent="." node_paths=PackedStringArray("anim_node")]
script = ExtResource("2_sfwix")
anim_curve = SubResource("Curve_00wtv")
anim_node = NodePath("..")

[connection signal="focus_exited" from="MarginContainer/VBoxContainer/TimeHBoxContainer/Minutes Duration LineEdit" to="." method="_on_time_set"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/TimeHBoxContainer/Minutes Duration LineEdit" to="." method="_on_minutes_duration_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/TimeHBoxContainer/Minutes Duration LineEdit" to="." method="_on_time_submitted"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/TimeHBoxContainer/Seconds Duration LineEdit" to="." method="_on_time_set"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/TimeHBoxContainer/Seconds Duration LineEdit" to="." method="_on_seconds_duration_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/TimeHBoxContainer/Seconds Duration LineEdit" to="." method="_on_time_submitted"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/TimeHBoxContainer/Minutes Left LineEdit" to="." method="_on_time_set"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/TimeHBoxContainer/Minutes Left LineEdit" to="." method="_on_minutes_left_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/TimeHBoxContainer/Minutes Left LineEdit" to="." method="_on_time_submitted"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/TimeHBoxContainer/Seconds Left LineEdit" to="." method="_on_time_set"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/TimeHBoxContainer/Seconds Left LineEdit" to="." method="_on_seconds_left_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/TimeHBoxContainer/Seconds Left LineEdit" to="." method="_on_time_submitted"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Icon Input" to="." method="_on_icon_input_text_changed"]
[connection signal="pressed" from="HBoxContainer/Back Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Confirm Button" to="." method="_on_confirm_button_pressed"]
